# paperflow_lite

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  SPEC.md  config.example.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml
prompts/: classify.md  summarize.md
src/paperflow/: __init__.py  classifier.py  cli.py  config.py  daemon.py  logging_config.py  models.py  parser.py  webdav.py  zotero.py
tests/: test_classifier.py  test_cli.py  test_config.py  test_daemon.py  test_models.py  test_parser.py  test_webdav.py  test_zotero.py
tests/fixtures/: config_invalid.yaml  config_valid.yaml
