[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperflow-lite"
version = "0.1.0"
description = "Smart paper sorting and summarization for Zotero"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyzotero>=1.5",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.26.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]

[project.scripts]
paperflow = "paperflow.cli:app"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/paperflow"]
